deployment/security/policies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cms-pipeline-network-policy
  labels:
    app: cms-pipeline

spec:
  podSelector:
    matchLabels:
      app: cms-pipeline

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cms-pipeline

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: cms-pipeline
